--- a/week1/main.css
+++ b/week1/main.css
@@ -1,3 +1,14 @@
+html{
+    box-sizing: border-box;
+  }
+*, 
+*:before, 
+*:after{
+    box-sizing: inherit;
+  }
 body {
-  backgroud: 
-}
+    background-color: #4b0082;
+    color: lavender;
+    text-align: center;
+    padding-top: 2rem;
+  } 
