--- a/week2/assignment/main.css
+++ b/week2/assignment/main.css
@@ -11,6 +11,6 @@ body {
     color: rgb(0, 100, 139);
     text-align: center;
     padding-top: 2rem;
-    font-size: xx-large;
+    font-size: x-large;
     font-family: 'Courier New', Courier, monospace;
   } 
