--- a/week8/assignment/lib/style.css
+++ b/week8/assignment/lib/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 [v-cloak] {
   display: none;
 }
@@ -10,12 +11,16 @@ h1,
 h2,
 h3 {
   font-size: 24px;
+  font-family: 'JetBrains Mono', 'Courier New', Courier, monospace;
 }
 body {
-  background-color: #fefef1;
+  background-color: #aff0e2;
   width: 100%;
   max-width: 1080px;
   margin: 0 auto;
+}
+h1{
+  padding: 25px 10px;
 }
 .collectionWrapper {
   display: flex;
@@ -26,11 +31,11 @@ body {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  background-color: #ccc;
-  border-bottom: 1px solid #111;
+  background-color: #e9fffb;
+  border-bottom: 1px solid #e9fffb;
 }
 .collectionRow.odd {
-  background-color: #eee;
+  background-color: #b5ccc7
 }
 .collectionRow.header {
   background-color: #fff;
