--- a/week14/final/main.css
+++ b/week14/final/main.css
@@ -6,13 +6,24 @@ html{
 *:after{
     box-sizing: inherit;
 }
+body{
+    background-color: rgb(235, 227, 227);
+}
 .collectionWrapper{
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    /**flex-direction: column;**/
 }
 .collectionRow{
     border: 1px solid red;
-    max-width: 500;
-    margin: 10px 0px;
+    max-width: 500px;
+    min-width: 300px;
+    margin: 10px;
     padding: 10px;
+}
+.cell{
+
+}
+.scam-name{
+    font-weight: bold;
 }
