--- a/week14/final/main.css
+++ b/week14/final/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap');
+
 html{
     box-sizing: border-box;
 }
@@ -7,7 +9,23 @@ html{
     box-sizing: inherit;
 }
 body{
-    background-color: rgb(235, 227, 227);
+    margin: 0;
+    background-color: rgb(235, 231, 231);
+    font-family: 'Antic Slab', 'Lucida Sans', Arial, sans-serif;
+}
+header{
+    background-color: rgb(128, 0, 75);
+    color: white;
+    margin: 0;
+    padding: 10px 25px;
+}
+main{
+    background-color: rgb(255, 244, 251);
+    margin: 10px;
+    padding: 10px 20px;
+}
+.description{
+    max-width: 800px;
 }
 .collectionWrapper{
     display: flex;
@@ -15,10 +33,9 @@ body{
     /**flex-direction: column;**/
 }
 .collectionRow{
-    border: 1px solid red;
-    max-width: 500px;
-    min-width: 300px;
-    margin: 10px;
+    border: 1px solid rgb(128, 0, 75);
+    max-width: 80%;
+    margin-bottom: 10px;
     padding: 10px;
 }
 .cell{
@@ -26,4 +43,7 @@ body{
 }
 .scam-name{
     font-weight: bold;
+    font-size: 20px;
+    color: rgb(128, 0, 75);
+    padding-bottom: 10px;
 }
