--- a/week14/final/main.css
+++ b/week14/final/main.css
@@ -21,6 +21,7 @@ header{
 }
 main{
     background-color: rgb(255, 244, 251);
+    min-height: 600px;
     margin: 10px;
     padding: 10px 20px;
 }
@@ -34,16 +35,21 @@ main{
 }
 .collectionRow{
     border: 1px solid rgb(128, 0, 75);
-    max-width: 80%;
+    max-width: 800px;
     margin-bottom: 10px;
     padding: 10px;
+    background-color: rgb(255, 249, 253);
 }
 .cell{
-
+    margin: 0;
+    padding: 5px;
 }
 .scam-name{
     font-weight: bold;
     font-size: 20px;
     color: rgb(128, 0, 75);
     padding-bottom: 10px;
+}
+.category-name{
+    font-weight: bold;
 }
