--- a/week14/final/main.css
+++ b/week14/final/main.css
@@ -27,7 +27,7 @@ main{
     background-color: rgb(255, 244, 251);
     min-height: 600px;
     margin: 10px;
-    padding: 10px 20px;
+    padding: 10px 10px;
 }
 .description{
     max-width: 800px;
@@ -35,9 +35,9 @@ main{
 .second-description{
     max-width: 700px;
     background-color: white;
-    border: 1px solid rgb(128, 0, 75);
     margin: 0;
-    padding: 100px;
+    margin-bottom: 10px;
+    padding: 10px;
 }
 .collectionWrapper{
     display: flex;
