--- a/week14/final/main.css
+++ b/week14/final/main.css
@@ -21,7 +21,7 @@ header{
     display: flex;
 }
 h1{
-    min-width: 80%;
+    min-width: 75%;
 }
 main{
     background-color: rgb(255, 244, 251);
@@ -37,7 +37,7 @@ main{
     background-color: white;
     margin: 0;
     margin-bottom: 10px;
-    padding: 10px;
+    padding: 5px 10px;
 }
 .collectionWrapper{
     display: flex;
@@ -46,12 +46,19 @@ main{
 .toolbar{
     padding-top: 25px;
 }
-.collectionRow{
+.collectionRow,
+.description_home{
     border: 1px solid rgb(128, 0, 75);
     max-width: 800px;
     margin-bottom: 10px;
     padding: 10px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+img{
+    max-width: 400px;
 }
 .cell{
     margin: 0;
@@ -68,8 +75,21 @@ main{
 }
 a{
    color: rgb(128, 0, 75);
+   text-decoration: none;
+}
+a:hover{
+    color: violet;
 }
 header a{
     color: white;
-    text-decoration: none;
+}
+.buttons{
+    margin: 10px;
+}
+.button_item{
+    color: white;
+    background-color: rgb(128, 0, 75);
+    margin: 10px;
+    padding: 10px;
+    border-radius: 5px;
 }
